# wifiprint

./: .gitignore  CMakeLists.txt  Makefile  README.md  dnsserver.h  index.html  index.js  lwipopts.h  main.c  main.py  minicom
frontend/: index.html  main.js  pdf.js  style.css
